# ubench

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.cc  branch_return.cc  branch_test.cc  branch_test.hh  chart.py  flake.nix  m5ops.cc  m5ops.hh  main.cc  perf.cc  plots.ipynb  scramble_btb.py  se-simple.py  simple_test.py  single_stride.hh  util.hh
.github/: dependabot.yml
.github/workflows/: compile.yml  shellcheck.yml
benchmarks/: CMakeLists.txt  README.md  base.cc  base.hh  registry.hh
benchmarks/branch/: binary_search.cc  branch_dependent_recycling.cc  branch_indirect.cc  branch_recycling.cc  branch_test.hh  lfsr.h  random.cc  random_array.cc  throughput.cc
benchmarks/btb/: btb_stress.cc  btb_stress_asm.cc  btb_stress_asm_gen.py  btb_stress_gen.py
benchmarks/cache/: l1i_cache.cc
benchmarks/prefetch/: single_stride.cc
benchmarks/search/: binary_search.cc  single_stride.hh
benchmarks/template/: simple_loop.cc  simple_loop.hh
benchmarks/value/: stride.cc
configs/: binary_search.yaml  branch_throughput.yaml  btb_stress.yaml  cache.yaml  prefetch_stride.yaml  random_branch.yaml  random_branch_array.yaml  simple_loop.yaml  value_stride.yaml
gem5-configs/: se-fdp-gnr.py  se-neoverse_v2.py
gem5-configs/util/: cache_configs.py  cpu_configs.py  neoverse_v2.py
old/: Makefile  benchmark.hh  branch_btb.cc  gadget.c  main.cc  scramble_btb.c  scramble_btb.h  single_stride_asm.S
plotting/: chart-je.py
utils/: CMakeLists.txt  configs.cc  configs.h  intmath.h  rdtsc.h  util.hh
utils/m5lib/amd64/: m5op.S  m5op_addr.S
utils/m5lib/arm64/: m5op.S  m5op_addr.S
utils/m5lib/riscv/: m5op.S
utils/perf/: perf.hh  perf_event.cpp
